Andrews updates to home pages - remove Free msg and change contact emails

--- a/casestudies/1/casestudy/www/layout/standard.asp?case_id=1.html
+++ b/casestudies/1/casestudy/www/layout/standard.asp?case_id=1.html
@@ -271,19 +271,13 @@ font-style:italic;
 		
 		</div>		
 		<h1 class="title">Settle or fight? <em>Far Eastern Economic Review</em> and Singapore</h1>
-		
-		
-		
+			
 		<div class="tabs"></div>
 
 		
 	  <div class="node">
     <span class="taxonomy"></span>
-    <div class="content"><blockquote>
-	<p>
-		<strong><span style="color: rgb(20, 69, 148);">This case is FREE.<br />
-		If you decide to teach this case, please send us an email at:&nbsp;</span></strong><span style="font-size: 10pt; font-family: Arial; color: rgb(153, 51, 0);"><a href="mailto:jcaseorders@columbia.edu" title="mailto:jcaseorders@columbia.edu"><strong><span title="mailto:jcaseorders@columbia.edu">jcaseorders@columbia.edu</span></strong></a><strong>&nbsp;</strong></span><strong><span style="color: rgb(20, 69, 148);">with the following information: case title, date of case class, course title, number of students. This allows us to track the usefulness of each case. Thanks.</span></strong></p>
-</blockquote>
+
 <p>
 	<strong>Abstract</strong></p>
 <p>
@@ -304,24 +298,13 @@ font-style:italic;
 </div>
 <p>
 	&nbsp;</p>
-<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19px; ">
-	<span style="font-size: 12px; "><strong>For further information, please contact:</strong></span></div>
-<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19px; ">
-	<span style="font-size: 12px; ">Kirsten Lundberg, Director, Case Consortium @ Columbia</span></div>
-<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19px; ">
-	<span style="font-size: 12px; ">Tel: 212-854-8398; Fax: 212-854-7837</span></div>
-<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19px; ">
-	<span style="font-size: 12px; ">Email:&nbsp;<a href="mailto:klundberg@columbia.edu" style="text-decoration: none; color: rgb(51, 102, 153); ">k</a><a href="mailto:Klundberg@columbia.edu" style="text-decoration: none; color: rgb(17, 85, 204); " target="_blank">lundberg@columbia.edu</a></span></div>
-<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19px; ">
-	<span style="font-size: 12px; ">Website:&nbsp;<a href="http://casestudies.jrn.columbia.edu/" style="text-decoration: none; color: rgb(51, 102, 153); ">https://casestudies.jrn.columbia.edu</a></span></div>
-<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19px; ">
-	&nbsp;</div>
-<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19px; ">
-	<span style="font-size: 12px; "><b>Send written inquiries to:</b><br />
-	Case Consortium @ Columbia<br />
-	2950 Broadway, MC 3812<br />
-	New York, NY 10027</span></div>
-</div>
+<div>
+	<strong>For further information:</strong></div>
+<div>
+	Email: <a href="mailto:ccnmtl+casestudies@columbia.edu" style="color: rgb(17, 85, 204);" target="_blank">ccnmtl+casestudies@columbia.edu</a></div>
+<div>
+	Website:&nbsp;<a href="http://casestudies.ccnmtl.columbia.edu/" target="_blank">https://casestudies.ccnmtl.columbia.edu</a></div>
+
 
 
 <div class="book-navigation" style="clear:both"><div class="page-links clear-block">
