--- a/casestudies/108/casestudy/www/layout/standard.asp?case_id=108.html
+++ b/casestudies/108/casestudy/www/layout/standard.asp?case_id=108.html
@@ -294,23 +294,13 @@ font-style:italic;
 <p>
 	&nbsp;</p>
 <div>
-	<strong>For further information, please contact:</strong></div>
+	<strong>For further information:</strong></div>
 <div>
-	Kirsten Lundberg, Director, Case Consortium @ Columbia</div>
+	Email: <a href="mailto:ccnmtl+casestudies@columbia.edu" style="color: rgb(17, 85, 204);" target="_blank">ccnmtl+casestudies@columbia.edu</a></div>
 <div>
-	Tel: 212-854-8398; Fax: 212-854-7837</div>
-<div>
-	Email:&nbsp;<a href="mailto:klundberg@columbia.edu">k</a><a href="mailto:Klundberg@columbia.edu" style="color: rgb(17, 85, 204);" target="_blank">lundberg@columbia.edu</a></div>
-<div>
-	Website:&nbsp;<a href="http://casestudies.jrn.columbia.edu/">https://casestudies.jrn.columbia.edu</a></div>
+	Website:&nbsp;<a href="http://casestudies.ccnmtl.columbia.edu/" target="_blank">https://casestudies.ccnmtl.columbia.edu</a></div>
 <div>
 	&nbsp;</div>
-<div>
-	<b>Send written inquiries to:</b><br />
-	Case Consortium @ Columbia<br />
-	2950 Broadway, MC 3812<br />
-	New York, NY 10027</div>
-</div>
 
 
 <div class="book-navigation" style="clear:both"><div class="page-links clear-block">
