--- a/casestudies/113/casestudy/www/layout/standard.asp?case_id=113.html
+++ b/casestudies/113/casestudy/www/layout/standard.asp?case_id=113.html
@@ -264,7 +264,12 @@ font-style:italic;
 <p>
 	Copyright &copy; 2013 Mailman School of Public Health. All Rights Reserved.</p>
 </div>
-
+<div>
+	<strong>For further information:</strong></div>
+<div>
+	E-mail: <a href="mailto:ccnmtl+casestudies@ccnmtl.edu" style="color: rgb(17, 85, 204);" target="_blank">ccnmtl+casestudies@ccnmtl.edu</a></div>
+<div>
+	Website:&nbsp;<a href="http://casestudies.ccnmtl.columbia.edu/" target="_blank">https://casestudies.ccnmtl.columbia.edu</a></div>
 
 <div class="book-navigation" style="clear:both"><div class="page-links clear-block">
 
