--- a/casestudies/115/casestudy/www/layout/standard.asp?case_id=115.html
+++ b/casestudies/115/casestudy/www/layout/standard.asp?case_id=115.html
@@ -351,18 +351,12 @@ font-style:italic;
 	Este caso fue escrito por David Mizner para Knight Case Studies Initiative, de la Escuela de Periodismo de la Universidad de Columbia, y supervisado por el profesor Ari Goldman. Fue financiado por John S. and James L. Knight Foundation. El banner fue producido por Columbia University Publications. Este caso fue traducido al espa&ntilde;ol por Pascale Bonnefoy, profesora del Instituto de la Comunicaci&oacute;n e Imagen, Universidad de Chile, en 2013. (0109)<br />
 	Copyright &copy; 2009 Consejo de Fiduciarios de la Universidad de Columbia en la ciudad de Nueva York. Ninguna parte de esta publicaci&oacute;n puede ser reproducida, revisada, traducida, almacenada en un sistema de recuperaci&oacute;n de datos, utilizada en una hoja de c&aacute;lculo, ni transmitida en cualquier forma o por cualquier medio (electr&oacute;nico, mec&aacute;nico, fotocopiado, grabado o cualquier otro) sin la autorizaci&oacute;n escrita de Case Studies Initiative.<br />
 	<br />
-	<span style="font-size:11px;">Para mayor informaci&oacute;n, por favor contactar:<br />
-	Kirsten Lundberg, Director, Case Consortium @ Columbia<br />
-	Tel: 212-854-8398; Fax: 212-854-7837<br />
-	Email: klundberg@columbia.edu<br />
-	Website: https://casestudies.jrn.columbia.edu<br />
-	<br />
-	Enviar consultas por correo a:<br />
-	Case Consortium @ Columbia<br />
-	2950 Broadway, MC 3812<br />
-	New York, NY 10027</span><br />
-	<br />
-	&nbsp;</p>
+	<div>
+	<strong>Para más información:</strong></div>
+<div>
+	E-mail: <a href="mailto:ccnmtl+casestudies@ccnmtl.edu" style="color: rgb(17, 85, 204);" target="_blank">ccnmtl+casestudies@ccnmtl.edu</a></div>
+<div>
+	Website:&nbsp;<a href="http://casestudies.ccnmtl.columbia.edu/" target="_blank">https://casestudies.ccnmtl.columbia.edu</a></div></p>
 </div>
 
 
