--- a/casestudies/120/casestudy/www/layout/standard.asp?case_id=120.html
+++ b/casestudies/120/casestudy/www/layout/standard.asp?case_id=120.html
@@ -172,8 +172,7 @@ font-style:italic;
 	  <div class="node">
     <span class="taxonomy"></span>
     <div class="content"><div>
-	<strong><span style="color: rgb(20, 69, 148);">This case is FREE.<br />
-	If you decide to teach this case, please send us an email at:&nbsp;</span></strong><span style="font-size: 10pt; font-family: Arial; color: rgb(153, 51, 0);"><a href="mailto:jcaseorders@columbia.edu" title="mailto:jcaseorders@columbia.edu"><strong><span title="mailto:jcaseorders@columbia.edu">jcaseorders@columbia.edu</span></strong></a><strong>&nbsp;</strong></span><strong><span style="color: rgb(20, 69, 148);">with the following information: case title, date of case class, course title, number of students. This allows us to track the usefulness of each case. Thanks.</span></strong></div>
+	
 <div>
 	&nbsp;</div>
 <div>
@@ -199,26 +198,11 @@ font-style:italic;
 <div>
 	&nbsp;</div>
 <div>
-	For further information, please contact:</div>
+	<strong>For further information:</strong></div>
 <div>
-	Kirsten Lundberg, Director, Case Consortium @ Columbia</div>
+	E-mail: <a href="mailto:ccnmtl+casestudies@ccnmtl.edu" style="color: rgb(17, 85, 204);" target="_blank">ccnmtl+casestudies@ccnmtl.edu</a></div>
 <div>
-	Tel: 212-854-8398; Fax: 212-854-7837</div>
-<div>
-	Email: <a href="mailto:klundberg@columbia.edu">klundberg@columbia.edu</a></div>
-<div>
-	Website: <a href="https://casestudies.jrn.columbia.edu">https://casestudies.jrn.columbia.edu</a></div>
-<div>
-	&nbsp;</div>
-<div>
-	Send written inquiries to:</div>
-<div>
-	Case Consortium @ Columbia</div>
-<div>
-	2950 Broadway, MC 3812</div>
-<div>
-	New York, NY 10027</div>
-</div>
+	Website:&nbsp;<a href="http://casestudies.ccnmtl.columbia.edu/" target="_blank">https://casestudies.ccnmtl.columbia.edu</a></div>
 
 
 <div class="book-navigation" style="clear:both"><div class="page-links clear-block">
