--- a/casestudies/131/casestudy/www/layout/standard.asp?case_id=131.html
+++ b/casestudies/131/casestudy/www/layout/standard.asp?case_id=131.html
@@ -261,10 +261,7 @@ font-style:italic;
 		
 	  <div class="node">
     <span class="taxonomy"></span>
-    <div class="content"><p>
-	<strong style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;">This case is FREE.</strong><br style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;" />
-	<strong style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;">If you decide to teach this case, please send us an email at&nbsp;</strong><a href="mailto:jcaseorders@columbia.edu" style="text-decoration: none; color: rgb(51, 102, 153); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;" target="_blank"><strong>jcaseorders@columbia.edu</strong></a><span style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;">&nbsp;</span><strong style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;">with the following information: case title, date of case class, course title, number of students. This allows us to track the usefulness of each case. Thanks.</strong></p>
-<p>
+    <div class="content">
 	<strong>ABSTRACT</strong><br />
 	<br />
 	<em>SIPA-14-0004.0</em> This case brings readers into the world of nonprofit social development. Fundaci&oacute;n Carvajal (FC) decides in 2011 to expand operations beyond familiar territory to the port city of Buenaventura, Colombia. The city is poverty stricken, and rebel-government violence common. But FC has developed over decades an integrated approach to social development which it is confident will be effective in Buenaventura. Central to its strategy is building trust with the target community and involving locals in devising their own solutions to problems. As the program director prepares the ground for this new project, however, he is asked to accelerate a baseline survey, short-cutting trust-building activities. He has to decide: hurry the process for valid strategic reasons at the risk of provoking local mistrust, or stick to the tested timetable.</p>
@@ -285,17 +282,12 @@ font-style:italic;
 <p style="margin-top: 0.5em; margin-bottom: 0.9em; color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;">
 	Copyright &copy; 2014 The Trustees of Columbia University in the City of New York. No part of this publication may be reproduced, revised, translated, stored in a retrieval system, used in a spreadsheet, or transmitted in any form or by any means (electronic, mechanical, photocopying, recording, or otherwise) without the written permission of the Case Consortium.</p>
 <p style="margin-top: 0.5em; margin-bottom: 0.9em; color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;">
-	<strong>For further information, please contact:</strong><br />
-	Kirsten Lundberg, Director, Case Consortium @ Columbia<br />
-	Tel: 212-854-8398; Fax: 212-854-7837<br />
-	Email:&nbsp;<a href="mailto:klundberg@columbia.edu" style="text-decoration: none; color: rgb(51, 102, 153);">k</a><a href="mailto:Klundberg@columbia.edu" style="text-decoration: none; color: rgb(51, 102, 153);" target="_blank">lundberg@columbia.edu</a><br />
-	Website:&nbsp;<a href="http://casestudies.jrn.columbia.edu/" style="text-decoration: none; color: rgb(51, 102, 153);">https://casestudies.jrn.columbia.edu</a></p>
-<p style="margin-top: 0.5em; margin-bottom: 0.9em; color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;">
-	<strong>Send written inquiries to:</strong><br />
-	Case Consortium @ Columbia<br />
-	2950 Broadway, MC 3812<br />
-	New York, NY 10027</p>
-</div>
+<div>
+	<strong>For further information:</strong></div>
+<div>
+	E-mail: <a href="mailto:ccnmtl+casestudies@ccnmtl.edu" style="color: rgb(17, 85, 204);" target="_blank">ccnmtl+casestudies@ccnmtl.edu</a></div>
+<div>
+	Website:&nbsp;<a href="http://casestudies.ccnmtl.columbia.edu/" target="_blank">https://casestudies.ccnmtl.columbia.edu</a></div>
 
 
 <div class="book-navigation" style="clear:both"><div class="page-links clear-block">
