--- a/casestudies/133/casestudy/www/layout/standard.asp?case_id=133.html
+++ b/casestudies/133/casestudy/www/layout/standard.asp?case_id=133.html
@@ -325,10 +325,7 @@ font-style:italic;
 	  <div class="node">
     <span class="taxonomy"></span>
     <div class="content"><p>
-	<strong style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;">This case is FREE.</strong><br style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;" />
-	<strong style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;">If you decide to teach this case, please send us an email at&nbsp;</strong><a href="mailto:jcaseorders@columbia.edu" style="text-decoration: none; color: rgb(51, 102, 153); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;" target="_blank"><strong>jcaseorders@columbia.edu</strong></a><span style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;">&nbsp;</span><strong style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;">with the following information: case title, date of case class, course title, number of students. This allows us to track the usefulness of each case. Thanks.</strong><br style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;" />
-	<br style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;" />
-	<strong style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;">ABSTRACT</strong><br />
+	<strong>ABSTRACT</strong><br />
 	<br />
 	<em>CCC-14-0005.0</em> This sustainable development case focuses on the unintended consequences of disaster and development aid on indigenous societies, and raises for discussion whether a better model exists. In December 2004, a killer tsunami swept across the Indian Ocean, devastating among others the Nicobar Islands, a remote outpost of India. The indigenous Nicobarese had a coconut-based economy; the tsunami not only killed 25 percent of the islanders but felled the trees on which they depended.</p>
 <p>
@@ -350,17 +347,12 @@ font-style:italic;
 		<a href="http://www.aftermath-thesecondflood.net">http://www.aftermath-thesecondflood.net</a></p>
 	<p>
 		<span style="font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;">Copyright &copy; 2014 The Trustees of Columbia University in the City of New York. No part of this publication may be reproduced, revised, translated, stored in a retrieval system, used in a spreadsheet, or transmitted in any form or by any means (electronic, mechanical, photocopying, recording, or otherwise) without the written permission of the Case Consortium.</span></p>
-	<p style="margin-top: 0.5em; margin-bottom: 0.9em; font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;">
-		<strong>For further information, please contact:</strong><br />
-		Kirsten Lundberg, Director, Case Consortium @ Columbia<br />
-		Tel: 212-854-8398; Fax: 212-854-7837<br />
-		Email:&nbsp;<a href="mailto:klundberg@columbia.edu" style="text-decoration: none; color: rgb(51, 102, 153);">k</a><a href="mailto:Klundberg@columbia.edu" style="text-decoration: none; color: rgb(51, 102, 153);" target="_blank">lundberg@columbia.edu</a><br />
-		Website:&nbsp;<a href="http://casestudies.jrn.columbia.edu/" style="text-decoration: none; color: rgb(51, 102, 153);">https://casestudies.jrn.columbia.edu</a></p>
-	<p style="margin-top: 0.5em; margin-bottom: 0.9em; font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;">
-		<strong>Send written inquiries to:</strong><br />
-		Case Consortium @ Columbia<br />
-		2950 Broadway, MC 3812<br />
-		New York, NY 10027</p>
+<div>
+	<strong>For further information:</strong></div>
+<div>
+	E-mail: <a href="mailto:ccnmtl+casestudies@ccnmtl.edu" style="color: rgb(17, 85, 204);" target="_blank">ccnmtl+casestudies@ccnmtl.edu</a></div>
+<div>
+	Website:&nbsp;<a href="http://casestudies.ccnmtl.columbia.edu/" target="_blank">https://casestudies.ccnmtl.columbia.edu</a></div>
 </div>
 </div>
 
