--- a/casestudies/142/casestudy/www/layout/standard.asp?case_id=142.html
+++ b/casestudies/142/casestudy/www/layout/standard.asp?case_id=142.html
@@ -195,24 +195,12 @@ font-style:italic;
 		&nbsp;&copy; 2012 The Aga Khan University Graduate School of Media and Communications. No part of this publication may be reproduced, revised, translated, stored in a retrieval system, used in a spreadsheet, or transmitted in any form or by any means (electronic, mechanical, photocopying, recording, or otherwise) without the written permission of Aga Khan University.<br />
 		&nbsp;</div>
 </div>
-<div style="font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.2000007629395px;">
-	<strong>For further information, please contact:</strong></div>
-<div style="font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.2000007629395px;">
-	Kirsten Lundberg, Director, Case Consortium @ Columbia</div>
-<div style="font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.2000007629395px;">
-	Tel: 857-259-2148<span style="line-height: 19.2000007629395px;">; Fax: 212-854-7837</span></div>
-<div style="font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.2000007629395px;">
-	Email:&nbsp;<a href="mailto:klundberg@columbia.edu" style="text-decoration: none; color: rgb(41, 71, 163);">k</a><a href="mailto:Klundberg@columbia.edu" style="text-decoration: none; color: rgb(17, 85, 204);" target="_blank">lundberg@columbia.edu</a></div>
-<div style="font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.2000007629395px;">
-	Website:&nbsp;<a href="http://casestudies.jrn.columbia.edu/" style="text-decoration: none; color: rgb(41, 71, 163);">https://casestudies.jrn.columbia.edu</a></div>
-<div style="font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.2000007629395px;">
-	&nbsp;</div>
-<div style="font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.2000007629395px;">
-	<b>Send written inquiries to:</b><br />
-	Case Consortium @ Columbia<br />
-	2950 Broadway, MC 3812<br />
-	New York, NY 10027</div>
-</div>
+<div>
+	<strong>For further information:</strong></div>
+<div>
+	E-mail: <a href="mailto:ccnmtl+casestudies@ccnmtl.edu" style="color: rgb(17, 85, 204);" target="_blank">ccnmtl+casestudies@ccnmtl.edu</a></div>
+<div>
+	Website:&nbsp;<a href="http://casestudies.ccnmtl.columbia.edu/" target="_blank">https://casestudies.ccnmtl.columbia.edu</a></div>
 
 
 <div class="book-navigation" style="clear:both"><div class="page-links clear-block">
