--- a/casestudies/30/casestudy/www/layout/standard.asp?case_id=30.html
+++ b/casestudies/30/casestudy/www/layout/standard.asp?case_id=30.html
@@ -321,23 +321,11 @@ font-style:italic;
 <p>
 	<span style="font-size: smaller;">Copyright &copy; 2009 The Trustees of </span><st1:placename w:st="on"><span style="font-size: smaller;">Columbia</span></st1:placename><st1:placetype w:st="on"><span style="font-size: smaller;"> University</span></st1:placetype><span style="font-size: smaller;"> in the City of </span><st1:city w:st="on"><st1:place w:st="on"><span style="font-size: smaller;">New York</span></st1:place></st1:city><span style="font-size: smaller;">. No part of this publication may be reproduced, revised, translated, stored in a retrieval system, used in a spreadsheet, or transmitted in any form or by any means (electronic, mechanical, photocopying, recording, or otherwise) without the written permission of the Case Studies Initiative.</span></p>
 <div>
-	<strong>For further information, please contact:</strong></div>
+	<strong>For further information:</strong></div>
 <div>
-	Kirsten Lundberg, Director, Case Consortium @ Columbia</div>
+	E-mail: <a href="mailto:ccnmtl+casestudies@ccnmtl.edu" style="color: rgb(17, 85, 204);" target="_blank">ccnmtl+casestudies@ccnmtl.edu</a></div>
 <div>
-	Tel: 857-259-2148; Fax: 212-854-7837</div>
-<div>
-	Email:&nbsp;<a href="mailto:klundberg@columbia.edu">k</a><a href="mailto:Klundberg@columbia.edu" style="color: rgb(17, 85, 204); " target="_blank">lundberg@columbia.edu</a></div>
-<div>
-	Website:&nbsp;<a href="http://casestudies.jrn.columbia.edu/">https://casestudies.jrn.columbia.edu</a></div>
-<div>
-	&nbsp;</div>
-<div>
-	<b>Send written inquiries to:</b><br />
-	Case Consortium @ Columbia<br />
-	2950 Broadway, MC 3812<br />
-	New York, NY 10027</div>
-</div>
+	Website:&nbsp;<a href="http://casestudies.ccnmtl.columbia.edu/" target="_blank">https://casestudies.ccnmtl.columbia.edu</a></div>
 
 
 <div class="book-navigation" style="clear:both"><div class="page-links clear-block">
