--- a/casestudies/50/casestudy/www/layout/standard.asp?case_id=50.html
+++ b/casestudies/50/casestudy/www/layout/standard.asp?case_id=50.html
@@ -352,21 +352,13 @@ font-style:italic;
 	<p>
 		<span style="font-size: smaller;">Copyright &copy; 2010 El Patronato de la Universidad de Columbia en la Ciudad de Nueva York. Ninguna parte de esta publicaci&oacute;n puede ser reproducida, revisada, traducida, almacenada en un sistema de recuperaci&oacute;n utilizado en una hoja de calculo, o transmitida en cualquier forma o por cualquier medio (electr&oacute;nico, mec&aacute;nico, fotocopia, grabaci&oacute;n o cualquier otro) sin el permiso escrito de Case Studies Initiative<i>.</i></span><span><i> </i></span></p>
 	<div>
-		<p>
-			<b><span>Para m&aacute;s informaci&oacute;n, p&oacute;ngase en contacto con:</span></b></p>
-		Kirsten Lundberg, Director, Case Consortium @ Columbia<br />
-		Tel: 212-854-8398; Fax: 212-854-7837<br />
-		<span class="s1">Email:&nbsp;<a href="mailto:klundberg@columbia.edu"><span class="s2">k</span></a><a href="mailto:Klundberg@columbia.edu"><span class="s3">lundberg@columbia.edu</span></a></span><br />
-		<span class="s1">Website:&nbsp;<span class="s2"><a href="http://casestudies.jrn.columbia.edu/">https://casestudies.jrn.columbia.edu</a></span></span></div>
-	<p>
-		<b><span>Env&iacute;e preguntas por escrito a:</span></b></p>
-	Case Consortium @ Columbia<br />
-	2950 Broadway, MC 3812<br />
-	New York, NY 10027
-	<p>
-		&nbsp;</p>
-</div>
-</div>
+<div>
+	<strong>Para más información:</strong></div>
+<div>
+	E-mail: <a href="mailto:ccnmtl+casestudies@ccnmtl.edu" style="color: rgb(17, 85, 204);" target="_blank">ccnmtl+casestudies@ccnmtl.edu</a></div>
+<div>
+	Website:&nbsp;<a href="http://casestudies.ccnmtl.columbia.edu/" target="_blank">https://casestudies.ccnmtl.columbia.edu</a></div>
+
 
 
 <div class="book-navigation" style="clear:both"><div class="page-links clear-block">
