--- a/casestudies/106/casestudy/www/layout/standard.asp?case_id=106.html
+++ b/casestudies/106/casestudy/www/layout/standard.asp?case_id=106.html
@@ -187,8 +187,13 @@ font-style:italic;
 	<span style="font-size:11px;"><strong>Credits:</strong>&nbsp;<em>This case was written by Carly Conway, Carly Lewis, Sarah Ratchford and Manori Ravindran of Ryerson University under the guidance of Kirsten Lundberg, Director, for the Case Consortium @ Columbia.&nbsp;The faculty sponsor was Professor Ivor Shapiro, Chair, School of Journalism, Faculty of Communication and Design, Ryerson University.&nbsp;(1012)</em></span></p>
 <p>
 	<span style="font-size:11px;">Copyright &copy; 2012 The Trustees of Columbia University in the City of New York. No part of this publication may be reproduced, revised, translated, stored in a retrieval system, used in a spreadsheet, or transmitted in any form or by any means (electronic, mechanical, photocopying, recording, or otherwise) without the written permission of the Case Consortium.</span></p>
-</div>
 
+	<p><strong>For further information:</strong></p>
+<p>
+	Email: <a href="mailto:ccnmtl+casestudies@columbia.edu" style="color: rgb(17, 85, 204);" target="_blank">ccnmtl+casestudies@columbia.edu</a></p>
+<p>
+	Website:&nbsp;<a href="http://casestudies.ccnmtl.columbia.edu/">https://casestudies.ccnmtl.columbia.edu</a></p>
+</div>
 
 <div class="book-navigation" style="clear:both"><div class="page-links clear-block">
 
