--- a/casestudies/109/casestudy/www/layout/standard.asp?case_id=109.html
+++ b/casestudies/109/casestudy/www/layout/standard.asp?case_id=109.html
@@ -285,7 +285,12 @@ font-style:italic;
 <p>
 	<span style="font-size:11px;">Copyright &copy; 2011 Consejo de Fiduciarios de la Universidad de Columbia en la ciudad de Nueva York. Ninguna parte de esta publicaci&oacute;n puede ser reproducida, revisada, traducida, almacenada en un sistema de recuperaci&oacute;n de datos, utilizada en una hoja de c&aacute;lculo, ni transmitida en cualquier forma o por cualquier medio (electr&oacute;nico, mec&aacute;nico, fotocopiado, grabado o cualquier otro) sin el permiso escrito de Case Studies Initiative.</span></p>
 </div>
-
+<div>
+	<strong>Para más información:</strong></div>
+<div>
+	E-mail: <a href="mailto:ccnmtl+casestudies@columbia.edu" style="color: rgb(17, 85, 204);" target="_blank">ccnmtl+casestudies@columbia.edu</a></div>
+<div>
+	Website:&nbsp;<a href="http://casestudies.ccnmtl.columbia.edu/" target="_blank">https://casestudies.ccnmtl.columbia.edu</a></div>
 
 <div class="book-navigation" style="clear:both"><div class="page-links clear-block">
 
