--- a/casestudies/117/casestudy/www/layout/standard.asp?case_id=117.html
+++ b/casestudies/117/casestudy/www/layout/standard.asp?case_id=117.html
@@ -185,17 +185,12 @@ font-style:italic;
 	<em>This case was written by Shahbano Tirmizi, Erin O&rsquo;Reilly, Elizabeth Herb and Lakshmi Balachandran and edited by Kirsten Lundberg, Director, Case Consortium @ Columbia, for the School of International and Public Affairs, Columbia University. The faculty sponsor was Prof. Glenn Denning of SIPA. (1113)</em></p>
 <p>
 	<span style="font-size:11px;">Copyright &copy; 2013 The Trustees of Columbia University in the City of New York. No part of this publication may be reproduced, revised, translated, stored in a retrieval system, used in a spreadsheet, or transmitted in any form or by any means (electronic, mechanical, photocopying, recording, or otherwise) without the written permission of the Case Studies Initiative.</span></p>
-<p>
-	<strong>For further information, please contact:</strong><br />
-	Kirsten Lundberg, Director, Case Consortium @ Columbia<br />
-	Tel: 212-854-8398; Fax: 212-854-7837<br />
-	Email:&nbsp;<a href="mailto:klundberg@columbia.edu">k</a><a href="mailto:Klundberg@columbia.edu" target="_blank">lundberg@columbia.edu</a><br />
-	Website:&nbsp;<a href="http://casestudies.jrn.columbia.edu/">https://casestudies.jrn.columbia.edu</a></p>
-<p>
-	<strong>Send written inquiries to:</strong><br />
-	Case Consortium @ Columbia<br />
-	2950 Broadway, MC 3812<br />
-	New York, NY 10027</p>
+<div>
+	<strong>For further information:</strong></div>
+<div>
+	E-mail: <a href="mailto:ccnmtl+casestudies@ccnmtl.edu" style="color: rgb(17, 85, 204);" target="_blank">ccnmtl+casestudies@ccnmtl.edu</a></div>
+<div>
+	Website:&nbsp;<a href="http://casestudies.ccnmtl.columbia.edu/" target="_blank">https://casestudies.ccnmtl.columbia.edu</a></div>
 </div>
 
 
