--- a/casestudies/118/casestudy/www/layout/standard.asp?case_id=118.html
+++ b/casestudies/118/casestudy/www/layout/standard.asp?case_id=118.html
@@ -172,8 +172,7 @@ font-style:italic;
 	  <div class="node">
     <span class="taxonomy"></span>
     <div class="content"><div>
-	<b style="color: rgb(0, 0, 0); font-family: arial, sans-serif; font-size: 13px;"><span style="font-size: 10.5pt; font-family: Arial, sans-serif; color: rgb(20, 69, 148);">This case is FREE.</span></b><br />
-	<strong style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;"><span style="color: rgb(20, 69, 148);">If you decide to teach this case, please send us an email at:&nbsp;</span></strong><span style="line-height: 19.200000762939453px; font-size: 10pt; font-family: Arial; color: rgb(153, 51, 0);"><a href="mailto:jcaseorders@columbia.edu" style="text-decoration: none; color: rgb(48, 83, 186);" title="mailto:jcaseorders@columbia.edu"><strong><span title="mailto:jcaseorders@columbia.edu">jcaseorders@columbia.edu</span></strong></a><strong>&nbsp;</strong></span><strong style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;"><span style="color: rgb(20, 69, 148);">with the following information: case title, date of case class, course title, number of students. This allows us to track the usefulness of each case. Thanks.</span></strong></div>
+	
 <div>
 	&nbsp;</div>
 <div>
@@ -201,29 +200,13 @@ font-style:italic;
 	&nbsp;</div>
 <div>
 	<span style="font-size: 10px;">Copyright &copy; 2013 The Trustees of Columbia University in the City of New York and <span style="font-size: 10px;">&copy; Kelly Toughill</span> . No part of this publication may be reproduced, revised, translated, stored in a retrieval system, used in a spreadsheet, or transmitted in any form or by any means (electronic, mechanical, photocopying, recording, or otherwise) without the written permission of the Case Consortium.</span></div>
+<p></p>
 <div>
-	&nbsp;</div>
+	<strong>For further information:</strong></div>
 <div>
-	For further information, please contact:</div>
+	E-mail: <a href="mailto:ccnmtl+casestudies@ccnmtl.edu" style="color: rgb(17, 85, 204);" target="_blank">ccnmtl+casestudies@ccnmtl.edu</a></div>
 <div>
-	Kirsten Lundberg, Director, Case Consortium @ Columbia</div>
-<div>
-	Tel: 857-259-2148; Fax: 212-854-7837</div>
-<div>
-	Email: <a href="mailto:klundberg@columbia.edu">klundberg@columbia.edu</a></div>
-<div>
-	Website: <a href="https://casestudies.jrn.columbia.edu">https://casestudies.jrn.columbia.edu</a></div>
-<div>
-	&nbsp;</div>
-<div>
-	Send written inquiries to:</div>
-<div>
-	Case Consortium @ Columbia</div>
-<div>
-	2950 Broadway, MC 3812</div>
-<div>
-	New York, NY 10027</div>
-</div>
+	Website:&nbsp;<a href="http://casestudies.ccnmtl.columbia.edu/" target="_blank">https://casestudies.ccnmtl.columbia.edu</a></div>
 
 
 <div class="book-navigation" style="clear:both"><div class="page-links clear-block">
