--- a/casestudies/119/casestudy/www/layout/standard.asp?case_id=119.html
+++ b/casestudies/119/casestudy/www/layout/standard.asp?case_id=119.html
@@ -190,26 +190,11 @@ font-style:italic;
 		<span style="font-size:10px;">&copy; 2013 The Aga Khan University Graduate School of Media and Communications. No part of this publication may be reproduced, revised, translated, stored in a retrieval system, used in a spreadsheet, or transmitted in any form or by any means (electronic, mechanical, photocopying, recording, or otherwise) without the written permission of Aga Khan University.</span></p>
 </div>
 <div>
-	For further information, please contact:</div>
+	<strong>For further information:</strong></div>
 <div>
-	Kirsten Lundberg, Director, Case Consortium @ Columbia</div>
+	E-mail: <a href="mailto:ccnmtl+casestudies@ccnmtl.edu" style="color: rgb(17, 85, 204);" target="_blank">ccnmtl+casestudies@ccnmtl.edu</a></div>
 <div>
-	Tel: 857-259-2148</div>
-<div>
-	Email: <a href="mailto:klundberg@columbia.edu">klundberg@columbia.edu</a></div>
-<div>
-	Website: <a href="https://casestudies.jrn.columbia.edu">https://casestudies.jrn.columbia.edu</a></div>
-<div>
-	&nbsp;</div>
-<div>
-	Send written inquiries to:</div>
-<div>
-	Case Consortium @ Columbia</div>
-<div>
-	2950 Broadway, MC 3812</div>
-<div>
-	New York, NY 10027</div>
-</div>
+	Website:&nbsp;<a href="http://casestudies.ccnmtl.columbia.edu/" target="_blank">https://casestudies.ccnmtl.columbia.edu</a></div>
 
 
 <div class="book-navigation" style="clear:both"><div class="page-links clear-block">
