--- a/casestudies/121/casestudy/www/layout/standard.asp?case_id=121.html
+++ b/casestudies/121/casestudy/www/layout/standard.asp?case_id=121.html
@@ -193,27 +193,13 @@ font-style:italic;
 	<em>This case was written by </em><em>R. Chandrasekhar</em><em>for the Aga Khan University Graduate School of Media and Communications. GSMC was a member of the Case Consortium @ Columbia, which coordinated production of the case. (0114)</em></p>
 <p style="margin-left:4.3pt;">
 	&copy; 2014 The Aga Khan University Graduate School of Media and Communications. No part of this publication may be reproduced, revised, translated, stored in a retrieval system, used in a spreadsheet, or transmitted in any form or by any means (electronic, mechanical, photocopying, recording, or otherwise) without the written permission of Aga Khan University.</p>
-<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;">
-	For further information, please contact:</div>
-<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;">
-	Kirsten Lundberg, Director, Case Consortium @ Columbia</div>
-<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;">
-	Tel: 212-854-8398; Fax: 212-854-7837</div>
-<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;">
-	Email:&nbsp;<a href="mailto:klundberg@columbia.edu" style="text-decoration: none; color: rgb(51, 102, 153);">klundberg@columbia.edu</a></div>
-<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;">
-	Website:&nbsp;<a href="https://casestudies.jrn.columbia.edu/" style="text-decoration: none; color: rgb(51, 102, 153);">https://casestudies.jrn.columbia.edu</a></div>
-<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;">
-	&nbsp;</div>
-<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;">
-	Send written inquiries to:</div>
-<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;">
-	Case Consortium @ Columbia</div>
-<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;">
-	2950 Broadway, MC 3812</div>
-<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;">
-	New York, NY 10027</div>
-</div>
+
+<div>
+	<strong>For further information:</strong></div>
+<div>
+	E-mail: <a href="mailto:ccnmtl+casestudies@ccnmtl.edu" style="color: rgb(17, 85, 204);" target="_blank">ccnmtl+casestudies@ccnmtl.edu</a></div>
+<div>
+	Website:&nbsp;<a href="http://casestudies.ccnmtl.columbia.edu/" target="_blank">https://casestudies.ccnmtl.columbia.edu</a></div>
 
 
 <div class="book-navigation" style="clear:both"><div class="page-links clear-block">
