--- a/casestudies/122/casestudy/www/layout/standard.asp?case_id=122.html
+++ b/casestudies/122/casestudy/www/layout/standard.asp?case_id=122.html
@@ -191,25 +191,12 @@ font-style:italic;
 	<p style="margin-top: 0.5em; margin-bottom: 0.9em; text-indent: 0em !important;">
 		<span style="font-size:11px;">&copy; 2013 The Aga Khan University Graduate School of Media and Communications. No part of this publication may be reproduced, revised, translated, stored in a retrieval system, used in a spreadsheet, or transmitted in any form or by any means (electronic, mechanical, photocopying, recording, or otherwise) without the written permission of Aga Khan University.</span></p>
 </div>
-<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;">
-	<span style="font-size:11px;">For further information, please contact:</span></div>
-<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;">
-	<span style="font-size:11px;">Kirsten Lundberg, Director, Case Consortium @ Columbia</span></div>
-<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;">
-	<span style="font-size:11px;">Tel: 212-854-8398; Fax: 212-854-7837</span></div>
-<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;">
-	<span style="font-size:11px;">Email:&nbsp;<a href="mailto:klundberg@columbia.edu" style="text-decoration: none; color: rgb(51, 102, 153);">klundberg@columbia.edu</a></span></div>
-<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;">
-	<span style="font-size:11px;">Website:&nbsp;<a href="https://casestudies.jrn.columbia.edu/" style="text-decoration: none; color: rgb(51, 102, 153);">https://casestudies.jrn.columbia.edu</a></span></div>
-<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;">
-	&nbsp;</div>
-<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;">
-	<span style="font-size:11px;">Send written inquiries to:</span></div>
-<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;">
-	<span style="font-size:11px;">Case Consortium @ Columbia</span></div>
-<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;">
-	<span style="font-size:11px;">2950 Broadway, MC 3812<br />
-	New York, NY 10027</span></div>
+<div>
+	<strong>For further information:</strong></div>
+<div>
+	E-mail: <a href="mailto:ccnmtl+casestudies@ccnmtl.edu" style="color: rgb(17, 85, 204);" target="_blank">ccnmtl+casestudies@ccnmtl.edu</a></div>
+<div>
+	Website:&nbsp;<a href="http://casestudies.ccnmtl.columbia.edu/" target="_blank">https://casestudies.ccnmtl.columbia.edu</a></div>
 </div>
 
 
