--- a/casestudies/123/casestudy/www/layout/standard.asp?case_id=123.html
+++ b/casestudies/123/casestudy/www/layout/standard.asp?case_id=123.html
@@ -191,27 +191,12 @@ font-style:italic;
 			<em>This case was written by&nbsp;</em><em>R. Chandrasekhar&nbsp;</em><em>for the Aga Khan University Graduate School of Media and Communications. GSMC was a member of the Case Consortium @ Columbia, which coordinated production of the case. (0512)</em></p>
 		<p style="margin-top: 0.5em; margin-bottom: 0.9em; margin-left: 4.3pt;">
 			&copy; 2014 The Aga Khan University Graduate School of Media and Communications. No part of this publication may be reproduced, revised, translated, stored in a retrieval system, used in a spreadsheet, or transmitted in any form or by any means (electronic, mechanical, photocopying, recording, or otherwise) without the written permission of Aga Khan University.</p>
-		<div>
-			For further information, please contact:</div>
-		<div>
-			Kirsten Lundberg, Director, Case Consortium @ Columbia</div>
-		<div>
-			Tel: 212-854-8398; Fax: 212-854-7837</div>
-		<div>
-			Email:&nbsp;<a href="mailto:klundberg@columbia.edu" style="text-decoration: none; color: rgb(51, 102, 153);">klundberg@columbia.edu</a></div>
-		<div>
-			Website:&nbsp;<a href="https://casestudies.jrn.columbia.edu/" style="text-decoration: none; color: rgb(51, 102, 153);">https://casestudies.jrn.columbia.edu</a></div>
-		<div>
-			&nbsp;</div>
-		<div>
-			Send written inquiries to:</div>
-		<div>
-			Case Consortium @ Columbia</div>
-		<div>
-			2950 Broadway, MC 3812</div>
-		<div>
-			New York, NY 10027</div>
-	</div>
+<div>
+	<strong>For further information:</strong></div>
+<div>
+	E-mail: <a href="mailto:ccnmtl+casestudies@ccnmtl.edu" style="color: rgb(17, 85, 204);" target="_blank">ccnmtl+casestudies@ccnmtl.edu</a></div>
+<div>
+	Website:&nbsp;<a href="http://casestudies.ccnmtl.columbia.edu/" target="_blank">https://casestudies.ccnmtl.columbia.edu</a></div>
 </div>
 </div>
 
