--- a/casestudies/124/casestudy/www/layout/standard.asp?case_id=124.html
+++ b/casestudies/124/casestudy/www/layout/standard.asp?case_id=124.html
@@ -253,8 +253,7 @@ font-style:italic;
 	  <div class="node">
     <span class="taxonomy"></span>
     <div class="content"><p>
-	<strong>This case is FREE.</strong><br />
-	<strong>If you decide to teach this case, please send us an email at:&nbsp;</strong><a href="mailto:jcaseorders@columbia.edu" target="_blank" title="mailto:jcaseorders@columbia.edu"><strong>jcaseorders@columbia.edu</strong></a>&nbsp;<strong>w<wbr>ith the following information: case title, date of case class, course title, number of students. This allows us to track the usefulness of each case. Thanks.</wbr></strong><br />
+	
 	<br />
 	<strong>ABSTRACT</strong><wbr><wbr><wbr><wbr><wbr></wbr></wbr></wbr></wbr></wbr></p>
 <p>
@@ -285,22 +284,12 @@ font-style:italic;
 	<p style="margin-top: 0.5em; margin-bottom: 0.9em; color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;">
 		<span style="font-size: 11px;">Copyright &copy; 2013 The Trustees of Columbia University in the City of New York. No part of this publication may be reproduced, revised, translated, stored in a retrieval system, used in a spreadsheet, or transmitted in any form or by any means (electronic, mechanical, photocopying, recording, or otherwise) without the written permission of the Case Consortium.</span></p>
 	<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19px;">
-		<strong>For further information, please contact:</strong></div>
-	<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19px;">
-		Kirsten Lundberg, Director, Case Consortium @ Columbia</div>
-	<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19px;">
-		Tel:857-259-2148; Fax: 212-854-7837</div>
-	<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19px;">
-		Email:&nbsp;<a href="mailto:klundberg@columbia.edu" style="text-decoration: none; color: rgb(51, 102, 153);">k</a><a href="mailto:Klundberg@columbia.edu" style="text-decoration: none; color: rgb(17, 85, 204);" target="_blank">lundberg@columbia.edu</a></div>
-	<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19px;">
-		Website:&nbsp;<a href="http://casestudies.jrn.columbia.edu/" style="text-decoration: none; color: rgb(51, 102, 153);">https://casestudies.jrn.columbia.edu</a></div>
-	<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19px;">
-		&nbsp;</div>
-	<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19px;">
-		<b>Send written inquiries to:</b><br />
-		Case Consortium @ Columbia<br />
-		2950 Broadway, MC 3812<br />
-		New York, NY 10027</div>
+<div>
+	<strong>For further information:</strong></div>
+<div>
+	E-mail: <a href="mailto:ccnmtl+casestudies@ccnmtl.edu" style="color: rgb(17, 85, 204);" target="_blank">ccnmtl+casestudies@ccnmtl.edu</a></div>
+<div>
+	Website:&nbsp;<a href="http://casestudies.ccnmtl.columbia.edu/" target="_blank">https://casestudies.ccnmtl.columbia.edu</a></div>
 	<p>
 		&nbsp;</p>
 	<p>
@@ -358,11 +347,14 @@ font-style:italic;
 <li class="leaf"><a href="http://www.journalism.columbia.edu">© 2012 Columbia University Graduate School of Journalism</a></li>
 
 </ul>
+<div>
+	<strong>For further information:</strong></div>
+<div>
+	E-mail: <a href="mailto:ccnmtl+casestudies@ccnmtl.edu" style="color: rgb(17, 85, 204);" target="_blank">ccnmtl+casestudies@ccnmtl.edu</a></div>
+<div>
+	Website:&nbsp;<a href="http://casestudies.ccnmtl.columbia.edu/" target="_blank">https://casestudies.ccnmtl.columbia.edu</a></div>
 </div>
- </div>
-			</div><!-- id="footer-inner" -->
 
-</div><!-- id="footer" -->
 
 
 
