--- a/casestudies/127/casestudy/www/layout/standard.asp?case_id=127.html
+++ b/casestudies/127/casestudy/www/layout/standard.asp?case_id=127.html
@@ -268,24 +268,12 @@ font-style:italic;
 </div>
 <p style="margin-top: 0.5em; margin-bottom: 0.9em; color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;">
 	<span style="font-size: 12px; line-height: 19px;">Copyright &copy; 2014 The Trustees of Columbia University in the City of New York. No part of this publication may be reproduced, revised, translated, stored in a retrieval system, used in a spreadsheet, or transmitted in any form or by any means (electronic, mechanical, photocopying, recording, or otherwise) without the written permission of the Case Consortium @ Columbia.</span></p>
-<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19px;">
-	<strong>For further information, please contact:</strong></div>
-<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19px;">
-	Kirsten Lundberg, Director, Case Consortium @ Columbia</div>
-<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19px;">
-	Tel: 857-259-2148; Fax: 212-854-7837</div>
-<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19px;">
-	Email:&nbsp;<a href="mailto:klundberg@columbia.edu" style="text-decoration: none; color: rgb(51, 102, 153);">k</a><a href="mailto:Klundberg@columbia.edu" style="text-decoration: none; color: rgb(17, 85, 204);" target="_blank">lundberg@columbia.edu</a></div>
-<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19px;">
-	Website:&nbsp;<a href="http://casestudies.jrn.columbia.edu/" style="text-decoration: none; color: rgb(51, 102, 153);">https://casestudies.jrn.columbia.edu</a></div>
-<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19px;">
-	&nbsp;</div>
-<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19px;">
-	<b>Send written inquiries to:</b><br />
-	Case Consortium @ Columbia<br />
-	2950 Broadway, MC 3812<br />
-	New York, NY 10027</div>
-</div>
+<div>
+	<strong>For further information:</strong></div>
+<div>
+	E-mail: <a href="mailto:ccnmtl+casestudies@ccnmtl.edu" style="color: rgb(17, 85, 204);" target="_blank">ccnmtl+casestudies@ccnmtl.edu</a></div>
+<div>
+	Website:&nbsp;<a href="http://casestudies.ccnmtl.columbia.edu/" target="_blank">https://casestudies.ccnmtl.columbia.edu</a></div>
 
 
 <div class="book-navigation" style="clear:both"><div class="page-links clear-block">
