--- a/casestudies/130/casestudy/www/layout/standard.asp?case_id=130.html
+++ b/casestudies/130/casestudy/www/layout/standard.asp?case_id=130.html
@@ -253,9 +253,6 @@ font-style:italic;
 	  <div class="node">
     <span class="taxonomy"></span>
     <div class="content"><p>
-	<strong>This case is FREE.</strong><br />
-	<strong>If you decide to teach this case, please send us an email at&nbsp;</strong><a href="mailto:jcaseorders@columbia.edu" target="_blank"><strong>jcaseorders@columbia.edu</strong></a>&nbsp;<strong>with the following information: case title, date of case class, course title, number of students. This allows us to track the usefulness of each case. Thanks.</strong><br />
-	<br />
 	<strong>ABSTRACT</strong></p>
 <p>
 	<em>CCC-14-0003.0&nbsp;</em>This case takes readers into the world of advocacy, and the benefits and risks of various strategies and tactics. Equal Education started in 2008 as a member-based organization with the mission of obliging the government to meet its own goals for making a decent education accessible to all South Africans. Based in Cape Town, it started with a campaign to fix broken window in a single school and grew to encompass libraries, bathrooms, and electricity. By 2012, it was nationwide with a membership of over 5,000 students. But in May 2013, it faced a dilemma. EE had sued the minister of basic education to issue basic norms and standards for school infrastructure, but she had missed yet another deadline and requested an extension. EE polled its members, who voted to deny an extension; EE legal counsel, however, advised granting it. The leadership had to decide what to do.</p>
@@ -273,17 +270,12 @@ font-style:italic;
 	<em>This case was written by Eric Smalley for the Case Consortium @ Columbia and the Global Association of MDP Programs. Funding was provided by the Open Society Foundations. (0714)</em></p>
 <p>
 	Copyright &copy; 2013 The Trustees of Columbia University in the City of New York. No part of this publication may be reproduced, revised, translated, stored in a retrieval system, used in a spreadsheet, or transmitted in any form or by any means (electronic, mechanical, photocopying, recording, or otherwise) without the written permission of the Case Consortium.</p>
-<p>
-	<strong>For further information, please contact:</strong><br />
-	Kirsten Lundberg, Director, Case Consortium @ Columbia<br />
-	Tel: 857-259-2148; Fax: 212-854-7837<br />
-	Email:&nbsp;<a href="mailto:klundberg@columbia.edu">k</a><a href="mailto:Klundberg@columbia.edu" target="_blank">lundberg@columbia.edu</a><br />
-	Website:&nbsp;<a href="http://casestudies.jrn.columbia.edu/">https://casestudies.jrn.columbia.edu</a></p>
-<p>
-	<strong>Send written inquiries to:</strong><br />
-	Case Consortium @ Columbia<br />
-	2950 Broadway, MC 3812<br />
-	New York, NY 10027</p>
+<div>
+	<strong>For further information:</strong></div>
+<div>
+	E-mail: <a href="mailto:ccnmtl+casestudies@ccnmtl.edu" style="color: rgb(17, 85, 204);" target="_blank">ccnmtl+casestudies@ccnmtl.edu</a></div>
+<div>
+	Website:&nbsp;<a href="http://casestudies.ccnmtl.columbia.edu/" target="_blank">https://casestudies.ccnmtl.columbia.edu</a></div>
 </div>
 
 
