--- a/casestudies/132/casestudy/www/layout/standard.asp?case_id=132.html
+++ b/casestudies/132/casestudy/www/layout/standard.asp?case_id=132.html
@@ -261,12 +261,8 @@ font-style:italic;
 		
 	  <div class="node">
     <span class="taxonomy"></span>
-    <div class="content"><div style="font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;">
-	<b style="font-family: arial, sans-serif; font-size: 13px;"><span style="font-size: 10.5pt; font-family: Arial, sans-serif; color: rgb(20, 69, 148);">This case is FREE.</span></b><br />
-	<strong><span style="color: rgb(20, 69, 148);">If you decide to teach this case, please send us an email at:&nbsp;</span></strong><span style="font-size: 10pt; font-family: Arial; color: rgb(153, 51, 0);"><a href="mailto:jcaseorders@columbia.edu" style="text-decoration: none; color: rgb(48, 83, 186);" title="mailto:jcaseorders@columbia.edu"><strong><span title="mailto:jcaseorders@columbia.edu">jcaseorders@columbia.edu</span></strong></a><strong>&nbsp;</strong></span><strong><span style="color: rgb(20, 69, 148);">with the following information: case title, date of case class, course title, number of students. This allows us to track the usefulness of each case. Thanks.</span></strong></div>
-<div style="font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;">
-	&nbsp;</div>
-<div style="font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;">
+    <div class="content">
+
 	<strong>ABSTRACT</strong></div>
 <p>
 	<em>CSJ-14-0055.0</em> &nbsp;This case looks at a community newspaper and how it might transform its business model to thrive in the digital age. It chronicles the award-winning <i>Whiteville</i> (NC) <em>News Reporter</em>&nbsp;as it confronts many of the economic, editorial and technological challenges facing community newspapers today. The newspaper has long printed its own paper, enjoyed high reader loyalty and been an important community institution. But emerging from the recession of 2008, the <i>News Reporter</i> leadership team of Leslie and Stuart High realizes business is not as usual, and that a new strategic plan needs to take account of new realities regarding revenue and product.&nbsp;</p>
@@ -288,23 +284,12 @@ font-style:italic;
 </div>
 <p style="margin-top: 0.5em; margin-bottom: 0.9em; color: rgb(0, 0, 0);">
 	<span style="font-size: 12px; line-height: 19px;">Copyright &copy; 2014 The Trustees of Columbia University in the City of New York. No part of this publication may be reproduced, revised, translated, stored in a retrieval system, used in a spreadsheet, or transmitted in any form or by any means (electronic, mechanical, photocopying, recording, or otherwise) without the written permission of the Case Consortium @ Columbia.</span></p>
-<div style="color: rgb(0, 0, 0); line-height: 19px;">
-	<strong>For further information, please contact:</strong></div>
-<div style="color: rgb(0, 0, 0); line-height: 19px;">
-	Kirsten Lundberg, Director, Case Consortium @ Columbia</div>
-<div style="color: rgb(0, 0, 0); line-height: 19px;">
-	Tel: 857-259-2148; Fax: 212-854-7837</div>
-<div style="color: rgb(0, 0, 0); line-height: 19px;">
-	Email:&nbsp;<a href="mailto:klundberg@columbia.edu" style="text-decoration: none; color: rgb(51, 102, 153);">k</a><a href="mailto:Klundberg@columbia.edu" style="text-decoration: none; color: rgb(17, 85, 204);" target="_blank">lundberg@columbia.edu</a></div>
-<div style="color: rgb(0, 0, 0); line-height: 19px;">
-	Website:&nbsp;<a href="http://casestudies.jrn.columbia.edu/" style="text-decoration: none; color: rgb(51, 102, 153);">https://casestudies.jrn.columbia.edu</a><br />
-	&nbsp;</div>
-<div style="color: rgb(0, 0, 0); line-height: 19px;">
-	<b>Send written inquiries to:</b><br />
-	Case Consortium @ Columbia<br />
-	2950 Broadway, MC 3812<br />
-	New York, NY 10027</div>
-</div>
+<div>
+	<strong>For further information:</strong></div>
+<div>
+	E-mail: <a href="mailto:ccnmtl+casestudies@ccnmtl.edu" style="color: rgb(17, 85, 204);" target="_blank">ccnmtl+casestudies@ccnmtl.edu</a></div>
+<div>
+	Website:&nbsp;<a href="http://casestudies.ccnmtl.columbia.edu/" target="_blank">https://casestudies.ccnmtl.columbia.edu</a></div>
 
 
 <div class="book-navigation" style="clear:both"><div class="page-links clear-block">
