--- a/casestudies/134/casestudy/www/layout/standard.asp?case_id=134.html
+++ b/casestudies/134/casestudy/www/layout/standard.asp?case_id=134.html
@@ -278,17 +278,12 @@ font-style:italic;
 <p>
 	Copyright &copy; 2014 The Trustees of Columbia University in the City of New York. No part of this publication may be reproduced, revised, translated, stored in a retrieval system, used in a spreadsheet, or transmitted in any form or by any means (electronic, mechanical, photocopying, recording, or otherwise) without the written permission of the Case Consortium.</p>
 <p style="margin-top: 0.5em; margin-bottom: 0.9em; color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;">
-	<strong>For further information, please contact:</strong><br />
-	Kirsten Lundberg, Director, Case Consortium @ Columbia<br />
-	Tel: 212-854-8398; Fax: 212-854-7837<br />
-	Email:&nbsp;<a href="mailto:klundberg@columbia.edu" style="text-decoration: none; color: rgb(51, 102, 153);">k</a><a href="mailto:Klundberg@columbia.edu" style="text-decoration: none; color: rgb(51, 102, 153);" target="_blank">lundberg@columbia.edu</a><br />
-	Website:&nbsp;<a href="http://casestudies.jrn.columbia.edu/" style="text-decoration: none; color: rgb(51, 102, 153);">https://casestudies.jrn.columbia.edu</a></p>
-<p style="margin-top: 0.5em; margin-bottom: 0.9em; color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;">
-	<strong>Send written inquiries to:</strong><br />
-	Case Consortium @ Columbia<br />
-	2950 Broadway, MC 3812<br />
-	New York, NY 10027</p>
-</div>
+<div>
+	<strong>For further information:</strong></div>
+<div>
+	E-mail: <a href="mailto:ccnmtl+casestudies@ccnmtl.edu" style="color: rgb(17, 85, 204);" target="_blank">ccnmtl+casestudies@ccnmtl.edu</a></div>
+<div>
+	Website:&nbsp;<a href="http://casestudies.ccnmtl.columbia.edu/" target="_blank">https://casestudies.ccnmtl.columbia.edu</a></div>
 
 
 <div class="book-navigation" style="clear:both"><div class="page-links clear-block">
