--- a/casestudies/135/casestudy/www/layout/standard.asp?case_id=135.html
+++ b/casestudies/135/casestudy/www/layout/standard.asp?case_id=135.html
@@ -325,10 +325,7 @@ font-style:italic;
 	  <div class="node">
     <span class="taxonomy"></span>
     <div class="content"><p>
-	<strong style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;">This case is FREE.</strong><br style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;" />
-	<strong style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;">If you decide to teach this case, please send us an email at&nbsp;</strong><a href="mailto:jcaseorders@columbia.edu" style="text-decoration: none; color: rgb(51, 102, 153); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;" target="_blank"><strong>jcaseorders@columbia.edu</strong></a><span style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;">&nbsp;</span><strong style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;">with the following information: case title, date of case class, course title, number of students. This allows us to track the usefulness of each case. Thanks.</strong><br style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;" />
-	<br style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;" />
-	<strong style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;">ABSTRACT</strong></p>
+	<strong>ABSTRACT</strong></p>
 <p>
 	<em>CCC-14-0006.0&nbsp;</em>A civil society activist in any country expects challenges, but with an authoritarian government the role can carry extra burdens. This case examines the creation and evolution of the Institute of Public and Environmental Affairs (IPE) in China. Ma Jun founded IPE in 2006 and built it into a powerful and effective environmental watchdog. IPE aggregated and made available to the general public pollution data already published by the government; it made the information easy to use and interpret (including identifying individual polluters) by embedding it in online interactive maps. The nonprofit&mdash;which emphasized collaboration, not confrontation&mdash;won tacit support from the central government, which seemed to approve of IPE&rsquo;s innovative use of information technology.</p>
 <div>
@@ -355,18 +352,13 @@ font-style:italic;
 	<p>
 		Copyright &copy; 2014 The Trustees of Columbia University in the City of New York. No part of this publication may be reproduced, revised, translated, stored in a retrieval system, used in a spreadsheet, or transmitted in any form or by any means (electronic, mechanical, photocopying, recording, or otherwise) without the written permission of the Case Consortium.</p>
 	<p style="margin-top: 0.5em; margin-bottom: 0.9em; color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;">
-		<strong>For further information, please contact:</strong><br />
-		Kirsten Lundberg, Director, Case Consortium @ Columbia<br />
-		Tel: 212-854-8398; Fax: 212-854-7837<br />
-		Email:&nbsp;<a href="mailto:klundberg@columbia.edu" style="text-decoration: none; color: rgb(51, 102, 153);">k</a><a href="mailto:Klundberg@columbia.edu" style="text-decoration: none; color: rgb(51, 102, 153);" target="_blank">lundberg@columbia.edu</a><br />
-		Website:&nbsp;<a href="http://casestudies.jrn.columbia.edu/" style="text-decoration: none; color: rgb(51, 102, 153);">https://casestudies.jrn.columbia.edu</a></p>
-	<p style="margin-top: 0.5em; margin-bottom: 0.9em; color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;">
-		<strong>Send written inquiries to:</strong><br />
-		Case Consortium @ Columbia<br />
-		2950 Broadway, MC 3812<br />
-		New York, NY 10027</p>
-</div>
-</div>
+<div>
+	<strong>For further information:</strong></div>
+<div>
+	E-mail: <a href="mailto:ccnmtl+casestudies@ccnmtl.edu" style="color: rgb(17, 85, 204);" target="_blank">ccnmtl+casestudies@ccnmtl.edu</a></div>
+<div>
+	Website:&nbsp;<a href="http://casestudies.ccnmtl.columbia.edu/" target="_blank">https://casestudies.ccnmtl.columbia.edu</a></div>
+
 
 
 <div class="book-navigation" style="clear:both"><div class="page-links clear-block">
