--- a/casestudies/146/casestudy/www/layout/standard.asp?case_id=146.html
+++ b/casestudies/146/casestudy/www/layout/standard.asp?case_id=146.html
@@ -284,23 +284,12 @@ font-style:italic;
 	<i style="font-family: Arial, Verdana, sans-serif; font-size: 12px;">This case was written by Eric Smalley for the Case Consortium @ Columbia and the Mailman School of Public&nbsp;</i><i style="font-family: Arial, Verdana, sans-serif; font-size: 12px;">Health. Additional funding was provided by the Open Society Foundations. (0914)</i></p>
 <p class="p1">
 	Copyright &copy; 2014 Mailman School of Public Health and Columbia University. All Rights Reserved.</p>
-<div style="font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19px;">
-	<strong>For further information, please contact:</strong></div>
-<div style="font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19px;">
-	Kirsten Lundberg, Director, Case Consortium @ Columbia</div>
-<div style="font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19px;">
-	Tel: 212-854-8398; Fax: 212-854-7837</div>
-<div style="font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19px;">
-	Email:&nbsp;<a href="mailto:klundberg@columbia.edu" style="text-decoration: none; color: rgb(51, 102, 153);">k</a><a href="mailto:Klundberg@columbia.edu" style="text-decoration: none; color: rgb(17, 85, 204);" target="_blank">lundberg@columbia.edu</a></div>
-<div style="font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19px;">
-	Website:&nbsp;<a href="http://casestudies.jrn.columbia.edu/" style="text-decoration: none; color: rgb(51, 102, 153);">https://casestudies.jrn.columbia.edu</a></div>
-<div style="font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19px;">
-	&nbsp;</div>
-<div style="font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19px;">
-	<b>Send written inquiries to:</b><br />
-	Case Consortium @ Columbia<br />
-	2950 Broadway, MC 3812<br />
-	New York, NY 10027</div></div>
+<div>
+	<strong>For further information:</strong></div>
+<div>
+	E-mail: <a href="mailto:ccnmtl+casestudies@ccnmtl.edu" style="color: rgb(17, 85, 204);" target="_blank">ccnmtl+casestudies@ccnmtl.edu</a></div>
+<div>
+	Website:&nbsp;<a href="http://casestudies.ccnmtl.columbia.edu/" target="_blank">https://casestudies.ccnmtl.columbia.edu</a></div>
 
 
 <div class="book-navigation" style="clear:both"><div class="page-links clear-block">
