--- a/casestudies/24/casestudy/www/layout/standard.asp?case_id=24.html
+++ b/casestudies/24/casestudy/www/layout/standard.asp?case_id=24.html
@@ -343,13 +343,6 @@ font-style:italic;
 	  <div class="node">
     <span class="taxonomy"></span>
     <div class="content"><blockquote>
-	<p>
-		<strong><span style="color: rgb(20, 69, 148);">This case is FREE.<br />
-		If you decide to teach this case, please send us an email at:&nbsp;</span></strong><span style="font-size: 10pt; font-family: Arial; color: rgb(153, 51, 0);"><a href="mailto:jcaseorders@columbia.edu" title="mailto:jcaseorders@columbia.edu"><strong><span title="mailto:jcaseorders@columbia.edu">jcaseorders@columbia.edu</span></strong></a><strong>&nbsp;</strong></span><strong><span style="color: rgb(20, 69, 148);">with the following information: case title, date of case class, course title, number of students. This allows us to track the usefulness of each case. Thanks.</span></strong></p>
-</blockquote>
-<p>
-	<span style="color: rgb(153, 51, 0);"><o:p></o:p></span></p>
-<p>
 	<b>Abstract</b></p>
 <p>
 	<i>CSJ-08-0012.0 </i>This case treats the hard choices which confront a news organization when violence strikes one of its reporters. In January 2006, <i>Christian Science Monitor</i> Managing Editor Marshall Ingwerson learned that one of his stringers in Iraq, Jill Carroll, had been kidnapped by unknown assailants in Baghdad. The case traces the steps which the newspaper took to try to win Carroll&#39;s release&mdash;alive. It describes how the paper&#39;s leadership managed the many constituents pulled into the drama-government agencies, <i>Monitor</i> staff, other news outlets, family members, NGOs, Arab go-betweens and so forth. The kidnappers&#39; demand&mdash;release all female Iraqi prisoners&mdash;was beyond the <i>Monitor</i>&#39;s control. A first deadline passed, but Carroll seemed still to be alive. As a second deadline approached, <i>Monitor</i> editors found themselves caught between conflicting advice from the CIA and FBI on whether to handle the case quietly, or conduct a high-profile publicity campaign to persuade her kidnappers to release Carroll.</p>
@@ -369,28 +362,12 @@ font-style:italic;
 	<p>
 		Copyright &copy; 2008 The Trustees of Columbia University in the City of New York. No part of this publication may be reproduced, revised, translated, stored in a retrieval system, used in a spreadsheet, or transmitted in any form or by any means (electronic, mechanical, photocopying, recording, or otherwise) without the written permission of the Case Studies Initiative.</p>
 </div>
-<p>
-	&nbsp;</p>
 <div>
-	<strong>For further information, please contact:</strong></div>
+	<strong>For further information:</strong></div>
 <div>
-	Kirsten Lundberg, Director, Case Consortium @ Columbia</div>
+	E-mail: <a href="mailto:ccnmtl+casestudies@ccnmtl.edu" style="color: rgb(17, 85, 204);" target="_blank">ccnmtl+casestudies@ccnmtl.edu</a></div>
 <div>
-	Tel: 212-854-8398; Fax: 212-854-7837</div>
-<div>
-	Email:&nbsp;<a href="mailto:klundberg@columbia.edu">k</a><a href="mailto:Klundberg@columbia.edu" style="color: rgb(17, 85, 204); " target="_blank">lundberg@columbia.edu</a></div>
-<div>
-	Website:&nbsp;<a href="http://casestudies.jrn.columbia.edu/">https://casestudies.jrn.columbia.edu</a></div>
-<div>
-	&nbsp;</div>
-<div>
-	&nbsp;</div>
-<div>
-	<b>Send written inquiries to:</b><br />
-	Case Consortium @ Columbia<br />
-	2950 Broadway, MC 3812<br />
-	New York, NY 10027</div>
-</div>
+	Website:&nbsp;<a href="http://casestudies.ccnmtl.columbia.edu/" target="_blank">https://casestudies.ccnmtl.columbia.edu</a></div>
 
 
 <div class="book-navigation" style="clear:both"><div class="page-links clear-block">
