--- a/casestudies/27/casestudy/www/layout/standard.asp?case_id=27.html
+++ b/casestudies/27/casestudy/www/layout/standard.asp?case_id=27.html
@@ -187,27 +187,12 @@ font-style:italic;
 	<em><span>This case was written by Kathleen Gilsinan for the Knight Case Studies Initiative, Graduate School of Journalism, Columbia University. The faculty sponsor was Professor Ruth Padawer. Funding was provided by the John S. and James L. Knight Foundation.</span></em></p>
 <p>
 	<span>Copyright &copy; 2008 The Trustees of Columbia University in the City of New York. No part of this publication may be reproduced, revised, translated, stored in a retrieval system, used in a spreadsheet, or transmitted in any form or by any means (electronic, mechanical, photocopying, recording, or otherwise) without the written permission of the Case Studies Initiative.</span></p>
-<p>
-	&nbsp;</p>
-<p class="p1">
-	<b>For further information, please contact:</b></p>
-<p>
-	Kirsten Lundberg, Director, Case Consortium @ Columbia</p>
-<p>
-	Tel: 212-854-8398; Fax: 212-854-7837</p>
-<p>
-	<span class="s1">Email:&nbsp;<a href="mailto:klundberg@columbia.edu"><span class="s2">k</span></a><span class="s3"><a href="mailto:Klundberg@columbia.edu">lundberg@columbia.edu</a></span></span></p>
-<p>
-	<span class="s1">Website:&nbsp;<span class="s2"><a href="http://casestudies.jrn.columbia.edu/">https://casestudies.jrn.columbia.edu</a></span></span></p>
-<p>
-	<b>Send written inquiries to:</b></p>
-<p>
-	Case Consortium @ Columbia</p>
-<p>
-	2950 Broadway, MC 3812</p>
-<p>
-	New York, NY 10027</p>
-</div>
+<div>
+	<strong>For further information:</strong></div>
+<div>
+	E-mail: <a href="mailto:ccnmtl+casestudies@ccnmtl.edu" style="color: rgb(17, 85, 204);" target="_blank">ccnmtl+casestudies@ccnmtl.edu</a></div>
+<div>
+	Website:&nbsp;<a href="http://casestudies.ccnmtl.columbia.edu/" target="_blank">https://casestudies.ccnmtl.columbia.edu</a></div>
 
 
 <div class="book-navigation" style="clear:both"><div class="page-links clear-block">
