--- a/casestudies/28/casestudy/www/layout/standard.asp?case_id=28.html
+++ b/casestudies/28/casestudy/www/layout/standard.asp?case_id=28.html
@@ -187,34 +187,13 @@ font-style:italic;
 	<em><span>This case was written by Kathleen Gilsinan for the Knight Case Studies Initiative, Graduate School of Journalism, Columbia University. The faculty sponsor was Professor Thomas Edsall. Funding was provided by the John S. and James L. Knight Foundation. (1208)</span></em></p>
 <p>
 	<span>Copyright &copy; 2008 The Trustees of Columbia University in the City of New York. No part of this publication may be reproduced, revised, translated, stored in a retrieval system, used in a spreadsheet, or transmitted in any form or by any means (electronic, mechanical, photocopying, recording, or otherwise) without the written permission of the Case Studies Initiative.</span></p>
-<p>
-	&nbsp;</p>
-<div>
-	<strong>For further information, please contact:</strong></div>
-<div>
-	Kirsten Lundberg, Director, Case Consortium @ Columbia</div>
-<div>
-	Tel: 212-854-8398; Fax: 212-854-7837</div>
-<div>
-	Email:&nbsp;<a href="mailto:klundberg@columbia.edu">k</a><a href="mailto:Klundberg@columbia.edu" style="color: rgb(17, 85, 204); " target="_blank">lundberg@columbia.edu</a></div>
-<div>
-	Website:&nbsp;<a href="http://casestudies.jrn.columbia.edu/">https://casestudies.jrn.columbia.edu</a></div>
-<div>
-	&nbsp;</div>
-<div>
-	&nbsp;</div>
-<div>
-	<b>Send written inquiries to:</b><br />
-	Case Consortium @ Columbia<br />
-	2950 Broadway, MC 3812<br />
-	New York, NY 10027</div>
-</div>
 
-
-<div class="book-navigation" style="clear:both"><div class="page-links clear-block">
-
-
-</div>
+<div>
+	<strong>For further information:</strong></div>
+<div>
+	E-mail: <a href="mailto:ccnmtl+casestudies@ccnmtl.edu" style="color: rgb(17, 85, 204);" target="_blank">ccnmtl+casestudies@ccnmtl.edu</a></div>
+<div>
+	Website:&nbsp;<a href="http://casestudies.ccnmtl.columbia.edu/" target="_blank">https://casestudies.ccnmtl.columbia.edu</a></div>
 </div></div>
 
       </div>
