--- a/casestudies/31/casestudy/www/layout/standard.asp?case_id=31.html
+++ b/casestudies/31/casestudy/www/layout/standard.asp?case_id=31.html
@@ -322,21 +322,12 @@ font-style:italic;
 	<i>This case was written by Julia Ioffe for the Knight Case Studies Initiative, <st1:placename w:st="on">Graduate</st1:placename> <st1:placetype w:st="on">School</st1:placetype> of Journalism, <st1:place w:st="on"><st1:placename w:st="on">Columbia</st1:placename> <st1:placetype w:st="on">University</st1:placetype></st1:place>. The faculty sponsor was Professor LynNell Hancock. Funding was provided by the John S. and James L. Knight Foundation. (1009)<o:p></o:p></i></p>
 <p>
 	<span style="font-size: smaller;">Copyright &copy; 2009 The Trustees of Columbia University in the City of New York. No part of this publication may be reproduced, revised, translated, stored in a retrieval system, used in a spreadsheet, or transmitted in any form or by any means (electronic, mechanical, photocopying, recording, or otherwise) without the written permission of the Case Studies Initiative.</span></p>
-<p>
-	<b>For further information, please contact:</b><br />
-	Kirsten Lundberg, Director, KCSI<br />
-	Tel: 212-854-8398<br />
-	Fax: 212-854-7837<br />
-	Email: <a href="mailto:kol2101@columbia.edu">kol2101@columbia.edu</a><br />
-	Website: <a href="http://casestudies.jrn.columbia.edu" target="_blank"><span class="extlink">http://casestudies.jrn.columbia.edu</span></a></p>
-<p class="footerp1text">
-</p>
-<p>
-	<b>Send written inquiries to:</b><br />
-	Knight Case Studies Initiative<br />
-	2950 Broadway, MC 3812<br />
-	New York, NY 10027<o:p> </o:p></p>
-</div>
+<div>
+	<strong>For further information:</strong></div>
+<div>
+	E-mail: <a href="mailto:ccnmtl+casestudies@ccnmtl.edu" style="color: rgb(17, 85, 204);" target="_blank">ccnmtl+casestudies@ccnmtl.edu</a></div>
+<div>
+	Website:&nbsp;<a href="http://casestudies.ccnmtl.columbia.edu/" target="_blank">https://casestudies.ccnmtl.columbia.edu</a></div>
 
 
 <div class="book-navigation" style="clear:both"><div class="page-links clear-block">
