--- a/casestudies/40/casestudy/www/layout/standard.asp?case_id=40.html
+++ b/casestudies/40/casestudy/www/layout/standard.asp?case_id=40.html
@@ -193,28 +193,12 @@ font-style:italic;
 	<i>This case was written by Julia Ioffe for the Knight Case Studies Initiative, <st1:placename w:st="on">Graduate</st1:placename> <st1:placetype w:st="on">School</st1:placetype> of Journalism, <st1:place w:st="on"><st1:placename w:st="on">Columbia</st1:placename> <st1:placetype w:st="on">University</st1:placetype></st1:place>. The faculty sponsor was Professor LynNell Hancock. Funding was provided by the John S. and James L. Knight Foundation. (1009)<o:p></o:p></i></p>
 <p>
 	<span style="font-size: smaller;">Copyright &copy; 2009 The Trustees of Columbia University in the City of New York. No part of this publication may be reproduced, revised, translated, stored in a retrieval system, used in a spreadsheet, or transmitted in any form or by any means (electronic, mechanical, photocopying, recording, or otherwise) without the written permission of the Case Studies Initiative.</span></p>
-<p>
-	&nbsp;</p>
 <div>
-	<strong>For further information, please contact:</strong></div>
+	<strong>For further information:</strong></div>
 <div>
-	Kirsten Lundberg, Director, Case Consortium @ Columbia</div>
+	E-mail: <a href="mailto:ccnmtl+casestudies@ccnmtl.edu" style="color: rgb(17, 85, 204);" target="_blank">ccnmtl+casestudies@ccnmtl.edu</a></div>
 <div>
-	Tel: 857-259-2148; Fax: 212-854-7837</div>
-<div>
-	Email:&nbsp;<a href="mailto:klundberg@columbia.edu">k</a><a href="mailto:Klundberg@columbia.edu" style="color: rgb(17, 85, 204); " target="_blank">lundberg@columbia.edu</a></div>
-<div>
-	Website:&nbsp;<a href="http://casestudies.jrn.columbia.edu/">https://casestudies.jrn.columbia.edu</a></div>
-<div>
-	&nbsp;</div>
-<div>
-	&nbsp;</div>
-<div>
-	<b>Send written inquiries to:</b><br />
-	Case Consortium @ Columbia<br />
-	2950 Broadway, MC 3812<br />
-	New York, NY 10027</div>
-</div>
+	Website:&nbsp;<a href="http://casestudies.ccnmtl.columbia.edu/" target="_blank">https://casestudies.ccnmtl.columbia.edu</a></div>
 
 
 <div class="book-navigation" style="clear:both"><div class="page-links clear-block">
