--- a/casestudies/53/casestudy/www/layout/standard.asp?case_id=53.html
+++ b/casestudies/53/casestudy/www/layout/standard.asp?case_id=53.html
@@ -235,10 +235,8 @@ font-style:italic;
 	  <div class="node">
     <span class="taxonomy"></span>
     <div class="content"><p class="MsoNormal" style="margin-left: 40px;">
-	<strong><span style="color: rgb(20, 69, 148);">This case is FREE.<br />
-	If you decide to teach this case, please send us an email at: </span></strong><span style="font-size: 10pt; font-family: Arial; color: rgb(153, 51, 0);"><a href="mailto:jcaseorders@columbia.edu" title="mailto:jcaseorders@columbia.edu"><strong><span style="font-family: Arial;"><span title="mailto:jcaseorders@columbia.edu">jcaseorders@columbia.edu</span></span></strong></a><strong><span style="font-family: Arial;"> </span></strong></span><strong><span style="color: rgb(20, 69, 148);">with the following information: case title, date of case class, course title, number of students. This allows us to track the usefulness of each case. Thanks.</span></strong><span style="color: rgb(20, 69, 148);"><o:p></o:p></span></p>
-<p>
-	<strong>Abstract</strong></p>
+	
+	<p><strong>Abstract</strong></p>
 <p>
 	<i>CSJ-10-0030.0&nbsp;</i>This case asks what rules exist on the use of social media in reporting news stories. In September 2009, the New Haven<i style=""> Independent</i>&mdash;a recent, online, local news website&mdash;finds itself beating the national competition on the shocking story of the murder of Annie Le, a Yale University graduate student. The <i style="">Independent</i>, thanks to local sources, is ahead on getting the name of the murder suspect, Raymond Clark. It also locates a police report naming him, which leads an <i style="">Independent</i> reporter to the suspect&rsquo;s former girlfriend, Jessica Del Rocco. On the social media network Facebook, reporter Melissa Bailey tracks down Del Rocco, who agrees to Bailey&rsquo;s request to become a Facebook &ldquo;friend.&rdquo; As Bailey reads Del Rocco&rsquo;s online posts about her reaction to the murder story, Bailey debates whether she can use this colorful, personal material. Are such online posts public, semi-private or private? Does it matter how many &ldquo;friends&rdquo; an individual has accumulated? Should the <i style="">Independent</i> disguise Del Rocco&rsquo;s identity?<span style="">&nbsp; </span></p>
 <p>
@@ -258,24 +256,11 @@ font-style:italic;
 		Copyright &copy; 2010 The Trustees of Columbia University in the City of New York. No part of this publication may be reproduced, revised, translated, stored in a retrieval system, used in a spreadsheet, or transmitted in any form or by any means (electronic, mechanical, photocopying, recording, or otherwise) without the written permission of the Case Studies Initiative.</p>
 </div>
 <div>
-	<strong>For further information, please contact:</strong></div>
+	<strong>For further information:</strong></div>
 <div>
-	Kirsten Lundberg, Director, Case Consortium @ Columbia</div>
+	E-mail: <a href="mailto:ccnmtl+casestudies@ccnmtl.edu" style="color: rgb(17, 85, 204);" target="_blank">ccnmtl+casestudies@ccnmtl.edu</a></div>
 <div>
-	Tel: 857-259-2148; Fax: 212-854-7837</div>
-<div>
-	Email:&nbsp;<a href="mailto:klundberg@columbia.edu">k</a><a href="mailto:Klundberg@columbia.edu" style="color: rgb(17, 85, 204); " target="_blank">lundberg@columbia.edu</a></div>
-<div>
-	Website:&nbsp;<a href="http://casestudies.jrn.columbia.edu/">https://casestudies.jrn.columbia.edu</a></div>
-<div>
-	&nbsp;</div>
-<div>
-	<b>Send written inquiries to:</b><br />
-	Case Consortium @ Columbia<br />
-	2950 Broadway, MC 3812<br />
-	New York, NY 10027</div>
-</div>
-
+	Website:&nbsp;<a href="http://casestudies.ccnmtl.columbia.edu/" target="_blank">https://casestudies.ccnmtl.columbia.edu</a></div>
 
 <div class="book-navigation" style="clear:both"><div class="page-links clear-block">
 
