--- a/casestudies/62/casestudy/www/layout/standard.asp?case_id=62.html
+++ b/casestudies/62/casestudy/www/layout/standard.asp?case_id=62.html
@@ -184,24 +184,12 @@ font-style:italic;
 <p>
 	<span style="font-size: 11px;">Copyright &copy; 2009 El Consejo de Fiduciarios de la Universidad de Columbia en la ciudad de Nueva York. Ninguna parte de esta publicaci&oacute;n puede ser reproducida, revisada, traducida, almacenada en un sistema de reparaci&oacute;n, que se utiliza en una hoja de c&aacute;lculo, o transmitida en cualquier forma o por cualquier medio (electr&oacute;nico, mec&aacute;nico, fotocopia, grabaci&oacute;n o cualquier otro) sin el permiso escrito de Case Studies Initiative.</span></p>
 <div>
-	<p>
-		<b><span>Para m&aacute;s informaci&oacute;n, </span></b><strong>ponerse en contacto con</strong><b><span>:</span></b></p>
-	<br />
-	<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19px; ">
-		<span style="font-size: 12px; ">Kirsten Lundberg, Director, Case Consortium @ Columbia</span></div>
-	<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19px; ">
-		<span style="font-size: 12px; ">Tel: 212-854-8398; Fax: 212-854-7837</span></div>
-	<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19px; ">
-		<span style="font-size: 12px; ">Email:&nbsp;<a href="mailto:klundberg@columbia.edu" style="text-decoration: none; color: rgb(51, 102, 153); ">k</a><a href="mailto:Klundberg@columbia.edu" style="text-decoration: none; color: rgb(17, 85, 204); " target="_blank">lundberg@columbia.edu</a></span></div>
-	<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19px; ">
-		<span style="font-size: 12px; ">Website:&nbsp;<a href="http://casestudies.jrn.columbia.edu/" style="text-decoration: none; color: rgb(51, 102, 153); ">https://casestudies.jrn.columbia.edu</a></span></div>
-</div>
-<p>
-	<b><span>Env&iacute;e preguntas por escrito a: </span></b><br />
-	<span style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; line-height: 19px; ">Case Consortium @ Columbia</span><br style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; line-height: 19px; " />
-	<span style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; line-height: 19px; ">2950 Broadway, MC 3812</span><br style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; line-height: 19px; " />
-	<span style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; line-height: 19px; ">New York, NY 10027</span></p>
-</div>
+	<strong>Para más información:</strong></div>
+<div>
+	E-mail: <a href="mailto:ccnmtl+casestudies@ccnmtl.edu" style="color: rgb(17, 85, 204);" target="_blank">ccnmtl+casestudies@ccnmtl.edu</a></div>
+<div>
+	Website:&nbsp;<a href="http://casestudies.ccnmtl.columbia.edu/" target="_blank">https://casestudies.ccnmtl.columbia.edu</a></div>
+
 
 
 <div class="book-navigation" style="clear:both"><div class="page-links clear-block">
