--- a/casestudies/70/casestudy/www/layout/standard.asp?case_id=70.html
+++ b/casestudies/70/casestudy/www/layout/standard.asp?case_id=70.html
@@ -272,10 +272,7 @@ font-style:italic;
     <span class="taxonomy"></span>
     <div class="content"><div class="content">
 	<div class="content">
-		<p>
-			<strong><span style="color: rgb(20, 69, 148);">This case is FREE.<br />
-			If you decide to teach this case, please send us an email at:&nbsp;</span></strong><span style="font-size: 10pt; font-family: Arial; color: rgb(153, 51, 0);"><a href="mailto:jcaseorders@columbia.edu" title="mailto:jcaseorders@columbia.edu"><strong><span title="mailto:jcaseorders@columbia.edu">jcaseorders@columbia.edu</span></strong></a><strong>&nbsp;</strong></span><strong><span style="color: rgb(20, 69, 148);">with the following information: case title, date of case class, course title, number of students. This allows us to track the usefulness of each case. Thanks.</span></strong><br />
-			<br />
+<p>
 			<strong>Abstract </strong></p>
 		<p>
 			<em>CSJ-11-0041.0 </em>This case is about the celebrated collaboration between WikiLeaks, the secure website for whistleblowers, and the mainstream media&mdash; focusing on the British <em>Guardian</em> newspaper. It raises for discussion whether the <em>Guardian</em> and its international media partners were correct to collaborate with WikiLeaks and to publish US secret government documents. The case traces the history of the <em>Guardian</em>&rsquo;s relationship with WikiLeaks founder Julian Assange through the summer and fall 2010 publication of confidential documents from the Afghan and Iraq battlefields, up through the eve of publishing a trove of classified diplomatic cables in November 2010. It also examines the relationship and logistics of coordinating five news organizations pledged to secrecy as they prepare to publish the cables simultaneously.</p>
@@ -293,26 +290,12 @@ font-style:italic;
 		</div>
 		<p>
 			Copyright &copy; 2011 The Trustees of Columbia University in the City of New York. No part of this publication may be reproduced, revised, translated, stored in a retrieval system, used in a spreadsheet, or transmitted in any form or by any means (electronic, mechanical, photocopying, recording, or otherwise) without the written permission of the Case Studies Initiative.</p>
-		<div>
-			<strong>For further information, please contact:</strong></div>
-		<div>
-			Kirsten Lundberg, Director, Case Consortium @ Columbia</div>
-		<div>
-			Tel: 857-259-2148; Fax: 212-854-7837</div>
-		<div>
-			Email:&nbsp;<a href="mailto:klundberg@columbia.edu">k</a><a href="mailto:Klundberg@columbia.edu" style="color: rgb(17, 85, 204); " target="_blank">lundberg@columbia.edu</a></div>
-		<div>
-			Website:&nbsp;<a href="http://casestudies.jrn.columbia.edu/">https://casestudies.jrn.columbia.edu</a></div>
-		<div>
-			&nbsp;</div>
-		<div>
-			<b>Send written inquiries to:</b><br />
-			Case Consortium @ Columbia<br />
-			2950 Broadway, MC 3812<br />
-			New York, NY 10027</div>
-	</div>
-</div>
-</div>
+<div>
+	<strong>For further information:</strong></div>
+<div>
+	E-mail: <a href="mailto:ccnmtl+casestudies@ccnmtl.edu" style="color: rgb(17, 85, 204);" target="_blank">ccnmtl+casestudies@ccnmtl.edu</a></div>
+<div>
+	Website:&nbsp;<a href="http://casestudies.ccnmtl.columbia.edu/" target="_blank">https://casestudies.ccnmtl.columbia.edu</a></div>
 
 
 <div class="book-navigation" style="clear:both"><div class="page-links clear-block">
