--- a/casestudies/87/casestudy/www/layout/standard.asp?case_id=87.html
+++ b/casestudies/87/casestudy/www/layout/standard.asp?case_id=87.html
@@ -277,24 +277,12 @@ font-style:italic;
 	<span style="font-size:14px;"><em>This case was written by Ted Smalley Bowen and Kirsten Lundberg, Director, for the Case Consortium @ Columbia. (0612)</em></span></p>
 <p>
 	Copyright &copy; 2013 The Mailman School of Public Health and Columbia University. All Rights Reserved.</p>
-<p>
-	<strong>For further information, please contact:</strong></p>
 <div>
-	Kirsten Lundberg, Director, Case Consortium @ Columbia</div>
+	<strong>For further information:</strong></div>
 <div>
-	Tel: 212-854-8398; Fax: 212-854-7837</div>
+	E-mail: <a href="mailto:ccnmtl+casestudies@ccnmtl.edu" style="color: rgb(17, 85, 204);" target="_blank">ccnmtl+casestudies@ccnmtl.edu</a></div>
 <div>
-	Email:&nbsp;<a href="mailto:klundberg@columbia.edu">k</a><a href="mailto:Klundberg@columbia.edu" style="color: rgb(17, 85, 204);" target="_blank">lundberg@columbia.edu</a></div>
-<div>
-	Website:&nbsp;<a href="http://casestudies.jrn.columbia.edu/">https://casestudies.jrn.columbia.edu</a></div>
-<div>
-	&nbsp;</div>
-<div>
-	<b>Send written inquiries to:</b><br />
-	Case Consortium @ Columbia<br />
-	2950 Broadway, MC 3812<br />
-	New York, NY 10027</div>
-</div>
+	Website:&nbsp;<a href="http://casestudies.ccnmtl.columbia.edu/" target="_blank">https://casestudies.ccnmtl.columbia.edu</a></div>
 
 
 <div class="book-navigation" style="clear:both"><div class="page-links clear-block">
