--- a/casestudies/92/casestudy/www/layout/standard.asp?case_id=92.html
+++ b/casestudies/92/casestudy/www/layout/standard.asp?case_id=92.html
@@ -344,7 +344,12 @@ font-style:italic;
 <p>
 	Copyright &copy; 2012 The Trustees of Columbia University in the City of New York. No part of this publication may be reproduced, revised, translated, stored in a retrieval system, used in a spreadsheet, or transmitted in any form or by any means (electronic, mechanical, photocopying, recording, or otherwise) without the written permission of the Case Consortium.</p>
 </div>
-
+<div>
+	<strong>For further information:</strong></div>
+<div>
+	E-mail: <a href="mailto:ccnmtl+casestudies@ccnmtl.edu" style="color: rgb(17, 85, 204);" target="_blank">ccnmtl+casestudies@ccnmtl.edu</a></div>
+<div>
+	Website:&nbsp;<a href="http://casestudies.ccnmtl.columbia.edu/" target="_blank">https://casestudies.ccnmtl.columbia.edu</a></div>
 
 <div class="book-navigation" style="clear:both"><div class="page-links clear-block">
 
